The spacing was a little off on the information section. Fixed it by giving the illustration-images and text the same height and width and also wrapping the information section in its own block like the others

--- a/styles.css
+++ b/styles.css
@@ -87,11 +87,18 @@ ul {
     justify-content: center;
 }
 /* CSS for secound section Illustrations */ 
+.information-block{
+    display:flex; 
+    flex-basis: 400px;
+    justify-content: center;
+}
 .information{
     display: flex; 
     flex-direction: column;
     align-items: center; 
-    gap: 10px; 
+    gap: 20px; 
+    flex-basis: 75%;
+    margin: 20px; 
 }
 .information-title{
     font-size: 36px;
@@ -106,8 +113,8 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 5px; 
-    flex-wrap: wrap;
 }
 
 .illustration-image{
@@ -118,6 +125,8 @@ ul {
 }
 
 .illustration-text{
+    height: 150px; 
+    width: 150px; 
     padding:5px; 
     margin: 5px; 
 }
@@ -148,6 +157,7 @@ ul {
     align-self: flex-end;
 }
 
+/* CSS for signup section */ 
 .signup-section{
     display:flex; 
     justify-content: center;
@@ -160,11 +170,28 @@ ul {
     display:flex; 
     flex-basis: 50%;
     height: 50%;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 .signup-info{
     display:flex; 
     flex-direction: column;
     
+}
+.signup-info-title{
+    font-size: 18px; 
+    font-weight: 900;
+    color: #F9FAF8; 
+}
+.signup-info-blurb{
+    color: #E5E7EB; 
+}
+.signup-info-signup{
+    border-radius: 4px; 
+    border: #F9FAF8 solid 2px; 
+    background-color: #3882F6; 
+    color: #F9FAF8; 
+    padding-left: 15px;
+    padding-right: 15px;
+
 }
